# gcloud_glamira_project

./: .env  main.py  pyproject.toml
config/: base.py  logger.py
extract/: pid_filter.py  product_crawler.py
loaders/: gcs_to_bq.py  load_ip_to_mongo.py  load_product_info_to_gcs.py  load_summary_to_gcs.py
processing/: ip_transformer.py  product_info_extractor.py  summary_transformer.py
schema/: schemas.py
schemas/: schema.py
utils/: checkpoint_utils.py  file_format_converter_utils.py  file_saving_utils.py  product_info_fields_extract_utils.py  time_utils.py
